# smarthome-mock-ai

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  TASK3_AI_BRAIN_SUMMARY.md  TASK3_IMPLEMENTATION_SUMMARY.md  TODO.md  main.py  prompt.md  pyproject.toml  test_advanced_scenarios.py  test_agent.py  test_ai_brain.py  test_final_verification.py  test_integration.py  verify_refactor.py
.github/workflows/: ci.yml
src/smarthome_mock_ai/: __init__.py  agent.py  device_persistence.py  devices.py  interaction_logger.py  learning.py  persistence.py  simulator.py  voice.py
tests/: __init__.py  test_example.py  test_intent_recognition.py  test_learning.py  test_persistence.py  test_registry.py  test_voice.py
